Fixed wrong position of message box

--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -36,6 +36,11 @@
 
 .page__messages {
   margin-top: -27px;
+
+  &-modal {
+    position: relative;
+    z-index: 500
+  }
 }
 
 .page__sidebar {
